--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Canstore</title>
   </head>
-  <body></body>
+  <body>
+    <section>
+      <img src="image/tiktok.webp" alt="#" />
+      <h1>Welcome to Canstore</h1>
+      <button><a href="main.html">Here</a></button>
+    </section>
+    <footer>&copy; Canstore 2025</footer>
+  </body>
 </html>
