--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Canstore</title>
+    <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <section>
@@ -11,6 +12,17 @@
       <h1>Welcome to Canstore</h1>
       <button><a href="main.html">Here</a></button>
     </section>
-    <footer>&copy; Canstore 2025</footer>
+    <footer>
+      <div class="contact-form">
+        <p>Sign up for the news:</p>
+        <form action="action_page.php">
+          <label for="Write your name"></label>
+          <input type="text" id="mail" name="mail" placeholder="Your e-mail" />
+
+          <input type="submit" value="submit" />
+        </form>
+      </div>
+      <p>&copy; 2025 Fizz Wizz All Rights Reserved</p>
+    </footer>
   </body>
 </html>
