--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Canstore</title>
+    <title>Fizz Wizz</title>
     <link rel="stylesheet" href="css/index.css" />
   </head>
   <body>
     <section>
-      <img src="image/tiktok.webp" alt="#" />
-      <h1>Welcome to Canstore</h1>
+      <figure>
+        <img src="image/tiktok.webp" alt="#" />
+      </figure>
+      <h1>Welcome to Fizz Wizz</h1>
       <button><a href="main.html">Here</a></button>
     </section>
     <footer>
