--- a/detail.html
+++ b/detail.html
@@ -9,8 +9,10 @@
   <body>
     <header>
       <div id="title">
-        <p id="fizz">Fizz</p>
-        <p id="wizz">Wizz</p>
+        <a href="main.html" id="title-link">
+          <p id="fizz">Fizz</p>
+          <p id="wizz">Wizz</p>
+        </a>
       </div>
       <nav>
         <ul>
