--- a/detail.html
+++ b/detail.html
@@ -9,10 +9,8 @@
   <body>
     <header>
       <div id="title">
-        <a href="main.html" id="title-link">
-          <p id="fizz">Fizz</p>
-          <p id="wizz">Wizz</p>
-        </a>
+        <p id="fizz">Fizz</p>
+        <p id="wizz">Wizz</p>
       </div>
       <nav>
         <ul>
@@ -26,7 +24,26 @@
       <figure>
         <img src="image/tiktok.webp" alt="" />
       </figure>
+      <section id="info">
+        <h1>Fizz Wizz</h1>
+        <h2>Original - Whatever the taste was</h2>
+        <p>15 kr</p>
+        <p>Choose Size</p>
+        <section class="sizes">
+          <div class="smaller">
+            <p class="size">330 ml</p>
+          </div>
+          <div class="bigger">
+            <p class="size">500 ml</p>
+          </div>
+        </section>
+        <button>Add To Cart</button>
+      </section>
     </main>
+    <section id="description">
+      <p>Description</p>
+      <button>+</button>
+    </section>
 
     <footer>
       <div class="contact-form">
