fixed blur and grid

--- a/main.html
+++ b/main.html
@@ -10,8 +10,10 @@
   <body>
     <header>
       <div id="title">
-        <p id="fizz">Fizz</p>
-        <p id="wizz">Wizz</p>
+        <a href="main.html">
+          <p id="fizz">Fizz</p>
+          <p id="wizz">Wizz</p>
+        </a>
       </div>
       <nav>
         <ul>
