--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
       <nav>
         <ul>
           <li><a href="#">&#9776;</a></li>
-          <li><a href="#">&#x1f6d2;</a></li>
+          <li><a href="#" id="cart-icon">&#x1f6d2;</a></li>
         </ul>
       </nav>
     </header>
@@ -26,7 +26,7 @@
     <!-- hero-->
 
     <div class="hero">
-      <input type="checkbox" id="toggle" />
+      <!-- <input type="checkbox" id="toggle" />
 
       <div class="layer" id="layer1">
         <div class="text">Peachyrizz</div>
@@ -43,7 +43,7 @@
           <img src="image/can2.png" alt="" class="wrapper" />
         </div>
         <label for="toggle"> click to see more</label>
-      </div>
+      </div> -->
     </div>
     <!-- main -->
     <main>
@@ -154,6 +154,15 @@
           </div>
         </div>
       </section>
+
+      <div id="cart-container">
+        <section class="cart">
+          <p>Cart</p>
+          <ul class="cart-items"></ul>
+          <p>total:<span id="cart-total">0</span> items</p>
+          <button id="pay-button">pay</button>
+        </section>
+      </div>
     </main>
 
     <footer>
