--- a/main.html
+++ b/main.html
@@ -56,7 +56,7 @@
           </a>
           <div class="description">
             <p>Original</p>
-            <a href="#" class="plus-button">+</a>
+            <a href="#" class="plus-button" data-name="Original">+</a>
           </div>
         </div>
 
