--- a/main.html
+++ b/main.html
@@ -65,7 +65,7 @@
           <div class="description">
             <p>Kiwibird</p>
             <a href="#"></a>
-            <a href="#" class="plus-button">+</a>
+            <a href="#" class="plus-button" data-name="kiwibird">+</a>
           </div>
         </div>
 
@@ -74,7 +74,7 @@
           <div class="description">
             <p>Kannana</p>
             <a href="#"></a>
-            <a href="#" class="plus-button">+</a>
+            <a href="#" class="plus-button" data-name="Kannana">+</a>
           </div>
         </div>
 
@@ -83,7 +83,7 @@
           <div class="description">
             <p>Appledream</p>
             <a href="#"></a>
-            <a href="#" class="plus-button">+</a>
+            <a href="#" class="plus-button" data-name="Appledream">+</a>
           </div>
         </div>
 
@@ -92,7 +92,7 @@
           <div class="description">
             <p>Bumbaberry</p>
             <a href="#"></a>
-            <a href="#" class="plus-button">+</a>
+            <a href="#" class="plus-button" data-name="Bumbaberry">+</a>
           </div>
         </div>
 
@@ -100,7 +100,7 @@
           <img src="image/lemonleaf.jpeg" alt="#" />
           <div class="description">
             <p>Lemonleaf</p>
-            <a href="#" class="plus-button">+</a>
+            <a href="#" class="plus-button" data-name="Lemonleaf">+</a>
           </div>
         </div>
 
@@ -109,7 +109,7 @@
           <div class="description">
             <p>Orangenade</p>
             <a href="#"></a>
-            <a href="#" class="plus-button">+</a>
+            <a href="#" class="plus-button" data-name="Orangenade">+</a>
           </div>
         </div>
 
@@ -118,7 +118,7 @@
           <div class="description">
             <p>Peachyrizz</p>
             <a href="#"></a>
-            <a href="#" class="plus-button">+</a>
+            <a href="#" class="plus-button" data-name="Peachyrizz">+</a>
           </div>
         </div>
 
@@ -127,7 +127,7 @@
           <div class="description">
             <p>Seedefect</p>
             <a href="#"></a>
-            <a href="#" class="plus-button">+</a>
+            <a href="#" class="plus-button" data-name="Seedeffect">+</a>
           </div>
         </div>
 
@@ -136,7 +136,7 @@
           <div class="description">
             <p>Straciello</p>
             <a href="#"></a>
-            <a href="#" class="plus-button">+</a>
+            <a href="#" class="plus-button" data-name="Straciello">+</a>
           </div>
         </div>
 
@@ -145,7 +145,7 @@
           <div class="description">
             <p>Sugarcoat</p>
             <a href="#"></a>
-            <a href="#" class="plus-button">+</a>
+            <a href="#" class="plus-button" data-name="Sugarcoat">+</a>
           </div>
         </div>
 
@@ -154,16 +154,16 @@
           <div class="description">
             <p>UPop</p>
             <a href="#"></a>
-            <a href="#" class="plus-button">+</a>
+            <a href="#" class="plus-button" data-name="UPoP">+</a>
           </div>
         </div>
       </section>
 
       <div id="cart-container">
         <section id="cart">
-          <p>Cart</p>
+          <p>Cart (<span id="cart-total"> 0</span>)</p>
           <ul class="cart-items"></ul>
-          <p>total:<span id="cart-total">0</span> items</p>
+          <p>Cart Total:<span id="sum"> 0 kr</span></p>
           <button id="pay-button">pay</button>
         </section>
       </div>
