fixing button in cart

--- a/main.html
+++ b/main.html
@@ -164,7 +164,11 @@
           <p>Cart (<span id="cart-total"> 0</span>)</p>
           <ul class="cart-items"></ul>
           <p>Cart Total:<span id="sum"> 0 kr</span></p>
-          <button id="pay-button">pay</button>
+
+          <div class="cart-buttons">
+            <button id="shop-button">shop more</button>
+            <button id="pay-button">checkout</button>
+          </div>
         </section>
       </div>
     </main>
