--- a/main.html
+++ b/main.html
@@ -20,6 +20,7 @@
           <li><a href="#">&#9776;</a></li>
           <li id="cart-icon">
             <a href="#">&#x1f6d2;</a>
+            <span id="cart-count" class="cart-count">0</span>
           </li>
         </ul>
       </nav>
