--- a/main.html
+++ b/main.html
@@ -29,6 +29,14 @@
     <!-- hero-->
 
     <div class="hero">
+      <img src="image/mockup.png" alt="" />
+      <div class="item" id="item1"><img src="image/can1.png" alt="" /></div>
+      <div class="item" id="item2"><img src="image/can2.png" alt="" /></div>
+      <div class="item" id="item3"><img src="image/can1.png" alt="" /></div>
+      <div class="item" id="item4"><img src="mage/can2.png" alt="" /></div>
+      <div class="item" id="item5"><img src="image/can1.png" alt="" /></div>
+      <div class="item" id="item6"><img src="image/can2.png" alt="" /></div>
+
       <!-- <input type="checkbox" id="toggle" />
 
       <div class="layer" id="layer1">
