--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
     <!-- hero-->
 
     <div class="hero">
-      <img src="image/mockup.png" alt="" />
+      <div class="hero-image"><img src="image/mockup.png" alt="" /></div>
       <div class="item" id="item1"><img src="image/can1.png" alt="" /></div>
       <div class="item" id="item2"><img src="image/can2.png" alt="" /></div>
       <div class="item" id="item3"><img src="image/can1.png" alt="" /></div>
