--- a/main.html
+++ b/main.html
@@ -28,32 +28,13 @@
     <!-- hero-->
 
     <div class="hero">
-      <div class="hero-image"><img src="image/mockup.png" alt="" /></div>
-      <div class="item" id="item1"><img src="image/can1.png" alt="" /></div>
-      <div class="item" id="item2"><img src="image/can2.png" alt="" /></div>
-      <div class="item" id="item3"><img src="image/can1.png" alt="" /></div>
-      <div class="item" id="item4"><img src="mage/can2.png" alt="" /></div>
-      <div class="item" id="item5"><img src="image/can1.png" alt="" /></div>
-      <div class="item" id="item6"><img src="image/can2.png" alt="" /></div>
-
-      <!-- <input type="checkbox" id="toggle" />
-
-      <div class="layer" id="layer1">
-        <div class="text">Peachyrizz</div>
-        <div class="class-container">
-          <img src="image/can1.png" alt="" class="can-img" />
-        </div>
-        <label for="toggle"> click to see more</label>
-      </div>
-
-      <div class="layer" id="layer2">
-        <div class="text">Peachyrizz</div>
-        <div class="class-container">
-          <img src="image/mockup.png" alt="" class="can-img" />
-          <img src="image/can2.png" alt="" class="wrapper" />
-        </div>
-        <label for="toggle"> click to see more</label>
-      </div> -->
+      <!-- <div class="hero-image"><img src="image/mockup.png" alt="" /></div> -->
+      <div class="item" id="item1"><img src="image/mockup.png" alt="" /></div>
+      <div class="item" id="item2"><img src="image/mockup.png" alt="" /></div>
+      <div class="item" id="item3"><img src="image/mockup.png" alt="" /></div>
+      <div class="item" id="item4"><img src="image/mockup.png" alt="" /></div>
+      <div class="item" id="item5"><img src="image/mockup.png" alt="" /></div>
+      <div class="item" id="item6"><img src="image/mockup.png" alt="" /></div>
     </div>
     <!-- main -->
     <main>
