--- a/detail_kiwibird.html
+++ b/detail_kiwibird.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fizz Wizz</title>
     <link rel="stylesheet" href="css/detail.css" />
+    <script src="details.js" defer></script>
     <script src="script.js" defer></script>
   </head>
   <body>
@@ -27,35 +28,14 @@
 
     <main>
       <figure>
-        <img src="image/orginal.jpeg" alt="" />
+        <img src="image/kiwibird.jpeg" alt="" />
       </figure>
       <section id="info">
         <h1>Fizz Wizz</h1>
-        <h2>Original - Whatever the taste was</h2>
+        <h4>Kiwibird - Whatever the taste was</h4>
         <p>15 kr</p>
-        <p>Choose Size</p>
-        <!--
-        
-          <div class="smaller">
-            <p class="size">330 ml</p>
-          </div>
-          <div class="bigger">
-            <p class="size">500 ml</p>
-          </div>
-        
-      -->
-        <section class="sizes">
-          <label class="label"
-            >330ml
-            <input type="radio" checked="checked" name="radio" />
-            <span class="checkmark"></span>
-          </label>
-          <label class="label"
-            >500ml
-            <input type="radio" name="radio" />
-            <span class="checkmark"></span>
-          </label>
-        </section>
+        <p>Size - 330 ml</p>
+
         <button>Add To Cart</button>
       </section>
     </main>
