--- a/main.html
+++ b/main.html
@@ -168,7 +168,7 @@
         <section id="cart">
           <p>Cart (<span id="cart-total"> 0</span>)</p>
           <ul class="cart-items"></ul>
-          <p>Cart Total:<span id="sum"> 0 kr</span></p>
+          <p>Cart Total:<span id="sum">0</span></p>
 
           <div class="cart-buttons">
             <button id="shop-button">shop more</button>
