--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="image/tiktok.webp" alt="#" />
       </figure>
       <h1>Welcome to Fizz Wizz</h1>
-      <button><a href="main.html">Here</a></button>
+      <a href="main.html" class="button">Here</a>
     </section>
     <footer>
       <div class="contact-form">
