--- a/detail_original.html
+++ b/detail_original.html
@@ -36,7 +36,9 @@
         <p>15 kr</p>
         <p>Size - 330 ml</p>
 
-        <button>Add To Cart</button>
+        <a href="#" class="button" id="add-to-cart" data-product="Orginal"
+          >Add To Cart</a
+        >
       </section>
     </main>
     <section id="description">
