--- a/detail_original.html
+++ b/detail_original.html
@@ -90,7 +90,40 @@
           <input type="submit" value="submit" />
         </form>
       </div>
-      <p>&copy; 2025 Fizz Wizz All Rights Reserved</p>
+      <div class="info">
+        <h1>Info</h1>
+        <ul>
+          <li><a href="#">F.A.Q</a></li>
+          <li><a href="#">Cookies Policy</a></li>
+          <li><a href="#">Terms of Service</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Community</a></li>
+        </ul>
+      </div>
+      <div class="useful">
+        <h1>Useful Information</h1>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Status</a></li>
+          <li><a href="#">Delivery</a></li>
+          <li><a href="#">Returns</a></li>
+        </ul>
+      </div>
+
+      <div class="contactinfo">
+        <h1>Contact Information</h1>
+        <ul>
+          <li><a href="#">0762543863</a></li>
+          <li><a href="#">fizzwizz_service@gmail.com</a></li>
+          <li><p>6011, 250 Wakefield Street</p></li>
+          <li><p>Wellington, New Zealand</p></li>
+        </ul>
+        <br />
+        <div class="copyright">
+          <p>&copy; 2025 Fizz Wizz All Rights Reserved</p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
