detail pages linked

--- a/detail_appledream.html
+++ b/detail_appledream.html
@@ -28,11 +28,11 @@
 
     <main>
       <figure>
-        <img src="image/kiwibird.jpeg" alt="" />
+        <img src="image/appledream.jpeg" alt="" />
       </figure>
       <section id="info">
         <h1>Fizz Wizz</h1>
-        <h4>Kiwibird - Whatever the taste was</h4>
+        <h4>Appledream - Whatever the taste was</h4>
         <p>15 kr</p>
         <p>Size - 330 ml</p>
 
