--- a/main.html
+++ b/main.html
@@ -50,47 +50,47 @@
         </div>
 
         <div class="autoBlur">
-          <a href="detail.html"> <img src="image/kiwibird.jpeg" alt="#" /> </a>
+          <a href="detail_kiwibird.html">
+            <img src="image/kiwibird.jpeg" alt="#" />
+          </a>
           <div class="description">
             <p>Kiwibird</p>
-            <a href="#"></a>
             <a href="#" class="plus-button" data-name="kiwibird">+</a>
           </div>
         </div>
 
         <div class="autoBlur">
-          <a href="detail.html"> <img src="image/kannana.jpeg" alt="#" /> </a>
+          <a href="detail_kananna.html">
+            <img src="image/kannana.jpeg" alt="#" />
+          </a>
           <div class="description">
             <p>Kannana</p>
-            <a href="#"></a>
             <a href="#" class="plus-button" data-name="Kannana">+</a>
           </div>
         </div>
 
         <div class="autoBlur">
-          <a href="detail.html">
+          <a href="detail_appledream.html">
             <img src="image/appledream.jpeg" alt="#" />
           </a>
           <div class="description">
             <p>Appledream</p>
-            <a href="#"></a>
             <a href="#" class="plus-button" data-name="Appledream">+</a>
           </div>
         </div>
 
         <div class="autoBlur">
-          <a href="detail.html">
+          <a href="detail_bumbaberry.html">
             <img src="image/bumbaberry.jpeg" alt="#" />
           </a>
           <div class="description">
             <p>Bumbaberry</p>
-            <a href="#"></a>
             <a href="#" class="plus-button" data-name="Bumbaberry">+</a>
           </div>
         </div>
 
         <div class="autoBlur">
-          <a href="detail.html">
+          <a href="detail_lemonleaf.html">
             <img src="image/lemonleaf.jpeg" alt="#" />
           </a>
           <div class="description">
@@ -100,40 +100,37 @@
         </div>
 
         <div class="autoBlur">
-          <a href="detail.html">
+          <a href="detail_orangenade.html">
             <img src="image/orangenade.jpeg" alt="#" />
           </a>
           <div class="description">
             <p>Orangenade</p>
-            <a href="#"></a>
             <a href="#" class="plus-button" data-name="Orangenade">+</a>
           </div>
         </div>
 
         <div class="autoBlur">
-          <a href="detail.html">
+          <a href="detail_peachyrizz.html">
             <img src="image/peachyrizz.jpeg" alt="#" />
           </a>
           <div class="description">
             <p>Peachyrizz</p>
-            <a href="#"></a>
             <a href="#" class="plus-button" data-name="Peachyrizz">+</a>
           </div>
         </div>
 
         <div class="autoBlur">
-          <a href="detail.html">
+          <a href="detail_seedefect.html">
             <img src="image/seedeffect.jpeg" alt="#" />
           </a>
           <div class="description">
-            <p>Seedefect</p>
-            <a href="#"></a>
+            <p>Seedeffect</p>
             <a href="#" class="plus-button" data-name="Seedeffect">+</a>
           </div>
         </div>
 
         <div class="autoBlur">
-          <a href="detail.html">
+          <a href="detail_straciello.html">
             <img src="image/straciello.jpeg" alt="#" />
           </a>
           <div class="description">
@@ -144,21 +141,21 @@
         </div>
 
         <div class="autoBlur">
-          <a href="detail.html"> <img src="image/sugarcoat.jpeg" alt="#" /> </a>
+          <a href="detail_sugarcoat.html">
+            <img src="image/sugarcoat.jpeg" alt="#" />
+          </a>
           <div class="description">
             <p>Sugarcoat</p>
-            <a href="#"></a>
             <a href="#" class="plus-button" data-name="Sugarcoat">+</a>
           </div>
         </div>
 
         <div class="autoBlur">
-          <a href="detail.html">
+          <a href="detail_upop.html">
             <img src="image/upop.jpeg" alt="#" />
           </a>
           <div class="description">
-            <p>UPop</p>
-            <a href="#"></a>
+            <p>UPoP</p>
             <a href="#" class="plus-button" data-name="UPoP">+</a>
           </div>
         </div>
