--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <section>
+      <h1>Welcome to</h1>
       <figure>
-        <img src="image/tiktok.webp" alt="#" />
+        <video src="video/videoindex.mp4" autoplay muted loop></video>
       </figure>
-      <h1>Welcome to Fizz Wizz</h1>
       <a href="main.html" class="button">Here</a>
     </section>
   </body>
