--- a/detail_bumbaberry.html
+++ b/detail_bumbaberry.html
@@ -32,7 +32,7 @@
       </figure>
       <section id="info">
         <h1>Fizz Wizz</h1>
-        <h4>Bumbaberry - Whatever the taste was</h4>
+        <h4>Bumbaberry - Blackberry and Pineapple</h4>
         <p>15 kr</p>
         <p>Size - 330 ml</p>
 
