--- a/detail_appledream.html
+++ b/detail_appledream.html
@@ -32,7 +32,7 @@
       </figure>
       <section id="info">
         <h1>Fizz Wizz</h1>
-        <h4>Appledream - Whatever the taste was</h4>
+        <h4>Appledream - Apple and Passionfruit</h4>
         <p>15 kr</p>
         <p>Size - 330 ml</p>
 
