--- a/detail_kananna.html
+++ b/detail_kananna.html
@@ -32,7 +32,7 @@
       </figure>
       <section id="info">
         <h1>Fizz Wizz</h1>
-        <h4>Kananna - Whatever the taste was</h4>
+        <h4>Kananna - Cactus and Banana</h4>
         <p>15 kr</p>
         <p>Size - 330 ml</p>
 
