--- a/detail_lemonleaf.html
+++ b/detail_lemonleaf.html
@@ -32,7 +32,7 @@
       </figure>
       <section id="info">
         <h1>Fizz Wizz</h1>
-        <h4>Lemonleaf - Whatever the taste was</h4>
+        <h4>Lemonleaf - Lemon and Mint</h4>
         <p>15 kr</p>
         <p>Size - 330 ml</p>
 
