--- a/detail_orangenade.html
+++ b/detail_orangenade.html
@@ -32,7 +32,7 @@
       </figure>
       <section id="info">
         <h1>Fizz Wizz</h1>
-        <h4>Orangenade - Whatever the taste was</h4>
+        <h4>Orangenade - Orange and Pomegranate</h4>
         <p>15 kr</p>
         <p>Size - 330 ml</p>
 
