--- a/detail_peachyrizz.html
+++ b/detail_peachyrizz.html
@@ -32,7 +32,7 @@
       </figure>
       <section id="info">
         <h1>Fizz Wizz</h1>
-        <h4>Peachyrizz - Whatever the taste was</h4>
+        <h4>Peachyrizz - Peach and Fizzypop candy</h4>
         <p>15 kr</p>
         <p>Size - 330 ml</p>
 
