--- a/detail_seedefect.html
+++ b/detail_seedefect.html
@@ -32,7 +32,7 @@
       </figure>
       <section id="info">
         <h1>Fizz Wizz</h1>
-        <h4>Seedeffect - Whatever the taste was</h4>
+        <h4>Seedeffect - Watermelon and Passionfruit</h4>
         <p>15 kr</p>
         <p>Size - 330 ml</p>
 
