--- a/detail_straciello.html
+++ b/detail_straciello.html
@@ -32,7 +32,7 @@
       </figure>
       <section id="info">
         <h1>Fizz Wizz</h1>
-        <h4>Straciello - Whatever the taste was</h4>
+        <h4>Straciello - Strawberry and Limoncello</h4>
         <p>15 kr</p>
         <p>Size - 330 ml</p>
 
