--- a/detail_sugarcoat.html
+++ b/detail_sugarcoat.html
@@ -32,7 +32,7 @@
       </figure>
       <section id="info">
         <h1>Fizz Wizz</h1>
-        <h4>Sugarcoat - Whatever the taste was</h4>
+        <h4>Sugarcoat - Vanilla and Cotton Candy</h4>
         <p>15 kr</p>
         <p>Size - 330 ml</p>
 
