--- a/detail_upop.html
+++ b/detail_upop.html
@@ -32,7 +32,7 @@
       </figure>
       <section id="info">
         <h1>Fizz Wizz</h1>
-        <h4>UPoP - Whatever the taste was</h4>
+        <h4>UPoP - Strawberry and Popping Candy</h4>
         <p>15 kr</p>
         <p>Size - 330 ml</p>
 
