index and cart fixed

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   </head>
   <body>
     <section>
-      <h1>Welcome to</h1>
+      <h1>
+        Welcome to <br />
+        Fizz Wizz
+      </h1>
       <figure>
-        <video src="video/videoindex.mp4" autoplay muted loop></video>
+        <img src="image/bubbles2.gif" alt="bubbles" />
       </figure>
       <a href="main.html" class="button">Here</a>
     </section>
