cart prices and arrow fixed

--- a/detail_lemonleaf.html
+++ b/detail_lemonleaf.html
@@ -36,7 +36,7 @@
         <p>15 kr</p>
         <p>Size - 330 ml</p>
 
-        <a href="#" class="button" id="add-to-cart" data-product="Orginal"
+        <a href="#" class="button" id="add-to-cart" data-product="Lemonleaf"
           >Add To Cart</a
         >
       </section>
