--- a/detail_peachyrizz.html
+++ b/detail_peachyrizz.html
@@ -25,6 +25,9 @@
         </ul>
       </nav>
     </header>
+    <section class="arrow">
+      <a href="main.html">&#129120;</a>
+    </section>
 
     <main>
       <figure>
@@ -36,7 +39,7 @@
         <p>15 kr</p>
         <p>Size - 330 ml</p>
 
-        <a href="#" class="button" id="add-to-cart" data-product="Orginal"
+        <a href="#" class="button" id="add-to-cart" data-product="Peachyrizz"
           >Add To Cart</a
         >
       </section>
