--- a/main.html
+++ b/main.html
@@ -45,6 +45,7 @@
           </a>
           <div class="description">
             <p>Original</p>
+            <p class="price">15 kr</p>
             <a href="#" class="plus-button" data-name="Original">+</a>
           </div>
         </div>
@@ -55,6 +56,7 @@
           </a>
           <div class="description">
             <p>Kiwibird</p>
+            <p class="price">15 kr</p>
             <a href="#" class="plus-button" data-name="kiwibird">+</a>
           </div>
         </div>
@@ -65,6 +67,7 @@
           </a>
           <div class="description">
             <p>Kannana</p>
+            <p class="price">15 kr</p>
             <a href="#" class="plus-button" data-name="Kannana">+</a>
           </div>
         </div>
@@ -75,6 +78,7 @@
           </a>
           <div class="description">
             <p>Appledream</p>
+            <p class="price">15 kr</p>
             <a href="#" class="plus-button" data-name="Appledream">+</a>
           </div>
         </div>
@@ -85,6 +89,7 @@
           </a>
           <div class="description">
             <p>Bumbaberry</p>
+            <p class="price">15 kr</p>
             <a href="#" class="plus-button" data-name="Bumbaberry">+</a>
           </div>
         </div>
@@ -95,6 +100,7 @@
           </a>
           <div class="description">
             <p>Lemonleaf</p>
+            <p class="price">15 kr</p>
             <a href="#" class="plus-button" data-name="Lemonleaf">+</a>
           </div>
         </div>
@@ -105,6 +111,7 @@
           </a>
           <div class="description">
             <p>Orangenade</p>
+            <p class="price">15 kr</p>
             <a href="#" class="plus-button" data-name="Orangenade">+</a>
           </div>
         </div>
@@ -115,6 +122,7 @@
           </a>
           <div class="description">
             <p>Peachyrizz</p>
+            <p class="price">15 kr</p>
             <a href="#" class="plus-button" data-name="Peachyrizz">+</a>
           </div>
         </div>
@@ -125,6 +133,7 @@
           </a>
           <div class="description">
             <p>Seedeffect</p>
+            <p class="price">15 kr</p>
             <a href="#" class="plus-button" data-name="Seedeffect">+</a>
           </div>
         </div>
@@ -135,7 +144,7 @@
           </a>
           <div class="description">
             <p>Straciello</p>
-            <a href="#"></a>
+            <p class="price">15 kr</p>
             <a href="#" class="plus-button" data-name="Straciello">+</a>
           </div>
         </div>
@@ -146,6 +155,7 @@
           </a>
           <div class="description">
             <p>Sugarcoat</p>
+            <p class="price">15 kr</p>
             <a href="#" class="plus-button" data-name="Sugarcoat">+</a>
           </div>
         </div>
@@ -156,6 +166,7 @@
           </a>
           <div class="description">
             <p>UPoP</p>
+            <p class="price">15 kr</p>
             <a href="#" class="plus-button" data-name="UPoP">+</a>
           </div>
         </div>
