--- a/detail_original.html
+++ b/detail_original.html
@@ -25,6 +25,9 @@
         </ul>
       </nav>
     </header>
+    <section class="arrow">
+      <a href="main.html">&#129120;</a>
+    </section>
 
     <main>
       <figure>
