x on every detail page

--- a/detail_lemonleaf.html
+++ b/detail_lemonleaf.html
@@ -25,6 +25,9 @@
         </ul>
       </nav>
     </header>
+    <section class="arrow">
+      <a href="main.html">X</a>
+    </section>
 
     <main>
       <figure>
