--- a/detail_kananna.html
+++ b/detail_kananna.html
@@ -26,7 +26,7 @@
       </nav>
     </header>
     <section class="arrow">
-      <a href="main.html">&#129120;</a>
+      <a href="main.html">X</a>
     </section>
 
     <main>
